--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="bg">
-    <body background="about.png">
+    <body background="ABOUT.png">
       <div class="navbar">
         <header>
           <nav>
