--- a/gangguan.html
+++ b/gangguan.html
@@ -30,6 +30,9 @@
 
   <div class="content">
     <h1>Gangguan Sistem Hormon</h1>
+    <p>Gangguan hormon terjadi ketika kelenjar penghasil hormon di dalam tubuh terganggu.<BR>
+       Kondisi ini membuat jumlah hormon yang dihasilkan kurang atau justru terlalu banyak, <BR>
+       sehingga fungsi organ tubuh tertentu terganggu dan muncul berbagai masalah kesehatan.</p>
     
 
       <div id="kotak" class="container">
