--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
      <header> <nav>
     
-        <li><a href="pengertian.html">Pengertian</a></li>
+        <li><a href="pengertian1.html">Pengertian</a></li>
         <li><a href="jenis.html">Jenis </a></li>
        <li><a href="fungsi.html"> Fungsi </a></li>
        <li><a href="gangguan.html">Gangguan </a></li>
