--- a/fungsi.html
+++ b/fungsi.html
@@ -21,7 +21,7 @@
             <li><a href="index.html">home</a></li>
             <li><a href="gangguan.html">gangguan</a></li>
             <li><a href="jenis.html">jenis</a></li>
-            <li><a href="pengertian.html">Pengertian</a></li>
+            <li><a href="pengertian1.html">Pengertian</a></li>
             <li><a href="jaga.html">Cara Menjaga</a></li>
           </nav>
         </header>
