--- a/jaga.html
+++ b/jaga.html
@@ -24,7 +24,7 @@
             <li><a href="gangguan.html">gangguan</a></li>
             <li><a href="jenis.html">jenis</a></li>
             <li><a href="fungsi.html">fungsi</a></li>
-            <li><a href="pengertian.html">Pengertian</a></li>
+            <li><a href="pengertian1.html">Pengertian</a></li>
           </nav>
         </header>
       </div>
