--- a/jenis.html
+++ b/jenis.html
@@ -53,7 +53,7 @@
   
    <header> <nav>
   
-      <li><a href="pengertian.html">Pengertian</a></li>
+      <li><a href="pengertian1.html">Pengertian</a></li>
       <li><a href="gangguan.html">Gangguan </a></li>
      <li><a href="fungsi.html"> Fungsi </a></li>
      <li><a href="index.html">Home </a></li>
