--- a/pengertian.html
+++ b/pengertian.html
@@ -25,6 +25,7 @@
             <li><a href="jenis.html">jenis</a></li>
             <li><a href="fungsi.html">fungsi</a></li>
             <li><a href="jaga.html">Cara Menjaga</a></li>
+            <li><a href="pengertian1.html">Back</a></li>
           </nav>
         </header>
       </div>
