--- a/fungsi.html
+++ b/fungsi.html
@@ -22,7 +22,7 @@
             <li><a href="gangguan.html">gangguan</a></li>
             <li><a href="jenis.html">jenis</a></li>
             <li><a href="pengertian1.html">Pengertian</a></li>
-            <li><a href="jaga.html">Cara Menjaga</a></li>
+            <li><a href="jaga1.html">Cara Menjaga</a></li>
           </nav>
         </header>
       </div>
