--- a/gangguan.html
+++ b/gangguan.html
@@ -22,7 +22,7 @@
         <li><a href="jenis.html">Jenis </a></li>
        <li><a href="fungsi.html"> Fungsi </a></li>
        <li><a href="index.html">Home </a></li>
-       <li><a href="jaga.html">Cara Menjaga</a></li>
+       <li><a href="jaga1.html">Cara Menjaga</a></li>
       
        </nav> </header>
   </div>
