--- a/jaga.html
+++ b/jaga.html
@@ -25,6 +25,7 @@
             <li><a href="jenis.html">jenis</a></li>
             <li><a href="fungsi.html">fungsi</a></li>
             <li><a href="pengertian1.html">Pengertian</a></li>
+            <li><a href="jaga1.html">BACK</a></li>
           </nav>
         </header>
       </div>
