--- a/jenis.html
+++ b/jenis.html
@@ -57,7 +57,7 @@
       <li><a href="gangguan.html">Gangguan </a></li>
      <li><a href="fungsi.html"> Fungsi </a></li>
      <li><a href="index.html">Home </a></li>
-     <li><a href="jaga.html">Cara Menjaga</a></li>
+     <li><a href="jaga1.html">Cara Menjaga</a></li>
      </nav> </header>
      </div>
 
