--- a/pengertian.html
+++ b/pengertian.html
@@ -24,7 +24,7 @@
             <li><a href="gangguan.html">gangguan</a></li>
             <li><a href="jenis.html">jenis</a></li>
             <li><a href="fungsi.html">fungsi</a></li>
-            <li><a href="jaga.html">Cara Menjaga</a></li>
+            <li><a href="jaga1.html">Cara Menjaga</a></li>
             <li><a href="pengertian1.html">Back</a></li>
           </nav>
         </header>
