--- a/jaga1.html
+++ b/jaga1.html
@@ -30,7 +30,7 @@
 
   <div class="content">
     <h1>Cara Menjaga</h1>
-    <p>TUntuk mencegah adanya ketidakstabilan hormon yang dapat menyebabkan dampak buruk,<br>
+    <p>Untuk mencegah adanya ketidakstabilan hormon yang dapat menyebabkan dampak buruk,<br>
     berikut adalah upaya yang dapat kita lakukan!!</p>
 
     <div>
